# colorNoKami

./: .gitignore  README.md  database_crafting.ipynb  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
database_crafting/: database_crafting_stages.py  interfaces.py  mongo_database_crafting.py
database_crafting/api_data/: api_data_iterator.py  interfaces.py  manga_dex_api_data.py  (+1 more)
database_crafting_service/: dockerfile  logging.ini  pyproject.toml
database_crafting_service/database_crafting/: database_crafting_stages.py  mongo_database_crafting.py  service.py
database_crafting_service/database_crafting/book/: interfaces.py  mongo_book_repository.py  mongo_chapters_by_book_pairer.py
database_crafting_service/database_crafting/chapter/: interfaces.py  mongo_chapter_pair_repository.py  mongo_chapter_repository.py  mongo_chapters_pair_with_scansurls_enricher.py
database_crafting_service/database_crafting/domain/: chapter.py
database_crafting_service/database_crafting/image_databank/: databank.py
database_crafting_service/database_crafting/log/: interface.py  mongo_log_derived_processors.py
database_crafting_service/database_crafting/logging/: default_logger.py
database_crafting_service/database_crafting/monitoring/: default_logger.py  interfaces.py
database_crafting_service/database_crafting/network_client/: interface.py
database_crafting_service/database_crafting/timeout/: timeout_in_seconds_processor.py
elk_service/: filebeat.yml
exploratory_notebooks/: database_crafting.ipynb
notebooks/: fetch_data.ipynb
(+24 files in other folders)
